spacing fixes

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -274,30 +274,30 @@ html {
     position: absolute; 
     width: 90%;
     height: 18%;
-    margin-left: 5%;
     /* border: 3px solid black; */
+    margin-left: 5%;
     }
 
 #resumeH {
     width: 100%;
     height: 50%;
-    text-align: center;
+    text-align:center;
     position: absolute;
-    justify-content: center;
+    margin-top: 7%;
 }
 
     #resumePicContainer {
     position:absolute;
-    width:80%;
+    width:90%;
     height:100%; 
+    margin-left:4%;
     }
     
 #resumePic {
     position: absolute;
     display:block;
     width: 100%;
-    margin-left: 10%;
-    margin-top: 35%;
+    margin-top: 40%;
     border: 5px solid white;
     border-radius: 1%;
     
@@ -306,7 +306,7 @@ html {
 #downloadResume{
     position: absolute;
     width: 50%;
-    margin-left: 35%;
+    margin-left: 30%;
     margin-top: 175%;
     padding-bottom: 5%;
 }
@@ -369,7 +369,7 @@ html {
     display:block;
     width: 80%;
     margin-left: 5%;
-    margin-top: -20%;
+    margin-top: -55%;
     border-radius: 5%;
 } 
 
